# aprs2mqtt

./: .gitignore  LICENSE  README.md  aprs-mqtt-msg-listener  aprs-mqtt-msg-sender  aprs2mqtt-msg-listener  aprs2mqtt-msg-sender  aprs2mqtt.code-workspace  aprs2mqttmsg  aprsmsg  hamcall.py  mqtt2aprsmsg  pyproject.toml  setup.py
aprs2mqtt/: APRS2MQTT.py  Exceptions.py  MQTT2APRS.py  Message.py  Util.py  __init__.py  aprs2mqttmsg.py  mqtt2aprsmsg.py  pyproject.toml
igate-server/: Makefile  direwolf.conf  igate  igate-console  igate.service  kissqueue.service
